# molecule-signature

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE.md  README.md  environment-dev.yml  environment.yml  pyproject.toml  tox.ini
.github/workflows/: test.yml  test_deprecated.yml
notebooks/: 1.create_alphabets.ipynb  2.reverse_engineer.ipynb  3.drug_application.ipynb  4.degeneracy.ipynb  creating-alphabet-basics.ipynb  enumeration-basics.ipynb  signature-basics.ipynb
notebooks/.ipynb_checkpoints/: 1.create_alphabets-checkpoint.ipynb  2.reverse_engineer-checkpoint.ipynb
src/: enumerate_signature.py  enumerate_utils.py  imports.py  signature.py  signature_alphabet.py  solve_partitions.py  utils.py
src/molsig/: Signature.py  SignatureAlphabet.py  __main__.py  enumerate_signature.py  enumerate_utils.py  solve_partitions.py  utils.py
src/signature/: Signature.py  drugbank_prims_with_nots.py  enumerate_signature.py  enumerate_utils.py  signature.py  signature_alphabet.py  signature_old.py  solve_partitions.py  utils.py
tests/molsig/: test_SignatureAlphabet.py  test_cmd.py  test_enumerate_signature.py  test_enumerate_utils.py  test_signature.py  test_solve_partitions.py
tests/signature/: test_enumerate_signature.py  test_signature.py  test_signature_alphabet.py  test_solve_partitions.py  test_utils.py
