[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "signature"
version = "1.3.2"
description = "Signature based molecule enumeration from morgan fingerprints"
readme = "README.md"
license = {text = "MIT"}

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_type = "semver2"
version_provider = "pep621"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.black]
line-length = 120
