[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "molecule-signature"
version = "2.1.0"
description = "Signature based molecule enumeration from morgan fingerprints"
keywords = [
    "chemoinformatics",
    "molecule fingerprint",
    "molecule enumeration",
    "molecule generation",
    "reverse engineering",
    "signature",
]
authors = [
    {name = "Thomas Duigou", email = "thomas.duigou@inrae.fr"},
    {name = "Jean-Loup Faulon", email = "jean-loup.faulon@inrae.fr"},
    {name = "Guillaume Gricourt", email = "guillaume.gricourt@inrae.fr"},
    {name = "Philippe Meyer", email = "philippe.meyer@inrae.fr"},
]
maintainers = [
    {name = "Thomas Duigou", email = "thomas.duigou@inrae.fr"},
]
readme = "README.md"
license = {text = "MIT License"}
requires-python = ">= 3.10"

[project.scripts]
molsig = "molsig.__main__:main"

[project.urls]
Homepage = "https://github.com/brsynth/molecule-signature"
Repository = "https://github.com/brsynth/molecule-signature.git"
Issues = "https://github.com/brsynth/molecule-signature/issues"
Changelog = "https://github.com/brsynth/molecule-signature/blob/main/CHANGELOG.md"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_type = "semver2"
version_provider = "pep621"
update_changelog_on_bump = true

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.black]
line-length = 100
